# Khnum

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  STATUS.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHARACTERIZATION.md  FPGA.md  GALLERY.md  INTEGRATION.md  demo.tape
examples/: README.md
examples/showcase/: khnum_sram_1rw_256x32_be.manifest.json  khnum_sram_1rw_256x32_be.v  khnum_sram_1rw_256x32_be_tb.v  khnum_sram_2r1w_64x64.manifest.json  khnum_sram_2r1w_64x64.v  khnum_sram_2r1w_64x64_tb.v
harden/: HARDEN_RESULTS.md
harden/designs/sky130hd/khnum_sram_1rw_1024x32/: config.mk  constraint.sdc
harden/designs/sky130hd/khnum_sram_1rw_2048x64/: config.mk  constraint.sdc  fix_antenna.tcl  fix_antenna2.tcl
harden/designs/sky130hd/khnum_sram_1rw_256x32/: config.mk  constraint.sdc
khnum/: __init__.py  bank.py  cli.py  ecc.py  fifo.py  rtl.py  tb.py
tests/cocotb/: Makefile  test_fifo_async.py  test_fifo_sync.py  test_rf_2r1w_ff.py  test_sram_1r1w.py  test_sram_1rw.py  test_sram_2r1w.py
tools/: characterize.py  formal.py  harden.sh  mutate.py  test_all.py  test_fpga.py
