[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "khnum-ram"
version = "0.1.0"
description = "Khnum — the ram-headed god of memory. Zero-dependency, laptop-class open-source memory compiler: verified SRAM/RF/FIFO/ECC RTL with self-checking testbenches."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Lord1Egypt" }]
requires-python = ">=3.8"
dependencies = []
keywords = ["memory-compiler", "sram", "rtl", "verilog", "fpga", "asic", "openroad", "eda", "silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/Lord1Egypt/Khnum"
Roadmap = "https://github.com/Lord1Egypt/Khnum/blob/main/ROADMAP.md"

[project.scripts]
khnum = "khnum.cli:main"

[tool.setuptools]
packages = ["khnum"]
